--- a/S3,S4/s3/S3.2/package.json
+++ b/S3,S4/s3/S3.2/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "nodejs",
+  "name": "video3.2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "colors": "^1.4.0"
-  }
+  "license": "ISC"
 }
