--- a/06-07-08/ch08/package.json
+++ b/06-07-08/ch08/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "multiparty": "^4.2.3"
   }
 }
